<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

	<LinearLayout
	    android:id="@+id/linearLayout1"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:orientation="vertical" >

	    <RelativeLayout
	        android:id="@+id/relativeLayout1"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="0.5" >
		
	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerInParent="true"
	            android:gravity="center"
	            android:text="@string/request_answer"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    </RelativeLayout>
		
		<LinearLayout
		    android:id="@+id/linearLayout1"
		    android:layout_width="fill_parent"
		    android:layout_height="0dp"
		    android:layout_weight="0.5"
		    android:orientation="horizontal" >

			<EditText
			    android:id="@+id/editText1"
			    android:layout_width="0dp"
			    android:layout_height="fill_parent"
			    android:layout_weight="3"
			    android:inputType="textPersonName" >

			    <requestFocus />

			</EditText>
			
			<Button
			    android:id="@+id/button1"
			    android:layout_width="0dp"
			    android:layout_height="fill_parent"
			    android:layout_weight="1"
			    android:text="@string/submit" />


		
		</LinearLayout>
	    
	    
		<Button
		    style="@style/default_vert_button_style"
			android:layout_weight="1"
		    android:id="@+id/buttonRed"
		    android:background="@drawable/red_button"
		    android:text="@string/need_help"
		    android:textColor="@string/whiteColorHEX"/>
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/linearLayout1"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:orientation="vertical" >
	</LinearLayout>

</LinearLayout>